# django-overcomingbias-collection

./: .dockerignore  .gitignore  Dockerfile  README.rst  manage.py  pyproject.toml  settings-example.py  setup.cfg
obcollection/: admin.py  apps.py  asgi.py  urls.py  wsgi.py
obcollection/settings/: base.py  local.py  production.py
