[metadata]
name = django-overcomingbias-collection
description = production environment for django-overcomingbias-pages
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/chris-mcdo/django-overcomingbias-collection
author = Christopher McDonald
author_email = cmcdonal33@gmail.com
license = MIT
license_file = LICENSE
platforms = win32, linux, osx
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: Indexing/Search
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4
    Framework :: Django :: 4.0
keywords = django, overcomingbias, scrape, website, content
project_urls =
    Source = https://github.com/chris-mcdo/django-overcomingbias-collection
    Tracker = https://github.com/chris-mcdo/django-overcomingbias-collection/issues

[options]
packages = find:
install_requires = 
    django-overcomingbias-pages
    python-dotenv>=0.20.0
    django-huey-email-backend
python_requires = >=3.8
zip_safe = False

[flake8]
max-line-length = 88
extend-ignore = E203

[isort]
profile = black
